<?xml version="1.0" encoding="utf-8"?>
<!-- 	The MIT License (MIT)

Copyright (c) 2015 ETCHEMENDY ELORRI

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
-->
<resources>

    <!-- the app name -->
    <string name="app_name" translatable="true">Alexandria</string>

    <!-- actions of the app -->
    <string name="action_settings" translatable="true">Settings</string>
    <string name="action_about" translatable="true">About</string>
    <string name="action_share" translatable="true">Share</string>

    <!-- titles of the different activities of the app -->
    <string name="title_activity_list" translatable="true">All books</string>
    <string name="title_activity_add" translatable="true">Add a book</string>
    <string name="title_activity_detail" translatable="true">Book detail</string>
    <string name="title_activity_about" translatable="true">About</string>
    <string name="title_activity_settings" translatable="true">Settings</string>
    <string name="title_activity_scan" translatable="true">Scan a book barcode</string>

    <!-- first page stored in SharedPreference file : label, key, values -->
    <!-- labels diplayed on the UI -->
    <string name="pref_start_page_label" translatable="true">Start page</string>
    <string name="pref_start_page_label_list" translatable="true">List books</string>
    <string name="pref_start_page_label_add" translatable="true">Add a book</string>
    <!-- keys -->
    <string name="pref_start_page_key" translatable="false">startPage</string>
    <!-- values -->
    <string name="pref_start_page_list" translatable="false">list</string>
    <string name="pref_start_page_add" translatable="false">add</string>
    
    <!-- status stored SharedPreferences -->
    <string name="pref_network_status_key" translatable="false">network_status</string>
    <string name="pref_google_book_api_status_key" translatable="false">google_book_api_status</string>
    <string name="pref_book_table_status_key" translatable="false">book_table_status</string>


    <!-- strings diplayed on the UI -->
    <string name="scan_button" translatable="true">Scan</string>
    <string name="input_hint" translatable="false">ex: 9780310941781</string>
    <string name="share_text" translatable="true">A must read book: </string>
    <string name="about_text" translatable="true">This application gets book information from a Google API.\n All titles, cover images, and author information come from there.\n
        The original version of this app was built by Sascha Jaschke, and this the modified version
        I have made for the Udacity Android Nanodegree program. </string>
    <string name="dismiss_button" translatable="true">dismiss</string>
    <string name="save_button" translatable="true">save</string>
    <string name="delete_button" translatable="true">delete</string>

    <!-- Empty scores listview -->
    <string name="no_books_internet_off" translatable="true">Network error. Please check your connection.</string>
    <string name="no_books_serveur_down" translatable="true">No books information available. The server is
        not returning valid data.</string>
    <string name="no_books_wrong_url_app_input" translatable="true">No books information available. The server is not returning valid data. Please check for an updated version of Alexndria.</string>
    <string name="no_books_table_status_unknown" translatable="true">Looking for book...</string>
    <string name="no_books" translatable="true">No book found.</string>
    <string name="no_books_in_your_library" translatable="true">Add books in your library to start</string>
    <string name="add_book_isbn" translatable="true">Add isbn book you want</string>

    
    <!-- strings used for developpement only -->
    <string name="lorem_ipsum_tool" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,...</string>

    
    <!-- talkback related -->
    <string name="book_cover" translatable="true">Book cover</string>

    <!-- Localisation related -->
    <string name="us_locale" translatable="false">en_US</string>
    <string name="fr_locale" translatable="false">fr_FR</string>
    <string name="ch_locale" translatable="false">zh_CN</string>


    <!--Google Play services 7.8 Mobile Vision API-->
    <string name="permission_camera_rationale" translatable="true">Access to the camera is needed for detection</string>
    <string name="ok" translatable="true">OK</string>
    <string name="low_storage_error" translatable="true">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission" translatable="true">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="capture_tip" translatable="true">Tap to capture. Pinch/Stretch to zoom</string>

</resources>
