<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">
<RelativeLayout
    android:id="@+id/body"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bookCover"
        android:layout_width="@dimen/add_book_cover_size"
        android:layout_height="@dimen/add_book_cover_size"
        android:layout_marginLeft="@dimen/normal_padding"
        android:layout_marginRight="@dimen/normal_padding"
        android:layout_marginTop="@dimen/normal_padding"
        android:contentDescription="@string/book_cover"
        android:scaleType="centerCrop"
        tools:src="@android:color/darker_gray"/>
    <TextView
        android:id="@+id/noBookFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:paddingRight="20dp"
        android:textIsSelectable="true"
        android:textSize="@dimen/head_line"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/bookCover"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="Holy Bible"/>

    <TextView
        android:id="@+id/bookSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookTitle"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/bookCover"
        android:ellipsize="end"
        android:maxLines="3"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/body_text_2"
        tools:text="Authorized King James Version"
        />

    <TextView
        android:id="@+id/authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookSubTitle"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@id/bookCover"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/body_text_2"
        tools:text="Zondervan Bibles"
        />


    <TextView
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bookCover"
        android:layout_marginLeft="16dp"
        android:textSize="@dimen/small_fontsize"
        tools:text="in Bibles"/>

    <TextView
        android:id="@+id/bookDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categories"
        android:layout_marginTop="8dp"
        android:padding="@dimen/normal_padding"
        tools:text="@string/lorem_ipsum"/>

    <Button
        android:id="@+id/dismiss_button"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/bookDesc"
        android:layout_margin="16dp"
        android:text="@string/dismiss_button"
        android:textColor="@color/secondary_text"/>

    <Button
        android:id="@+id/save_button"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/bookDesc"
        android:layout_margin="16dp"
        android:text="@string/save_button"/>

    <Button
        android:id="@+id/delete_button"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/bookDesc"
        android:layout_margin="16dp"
        android:text="@string/delete_button"/>

</RelativeLayout>
</ScrollView>