<?xml version="1.0" encoding="utf-8"?>
<!-- 	The MIT License (MIT)

Copyright (c) 2015 ETCHEMENDY ELORRI

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.
-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxxxlarge"
            android:background="@color/secondary_light">

            <android.support.v7.widget.SearchView
                android:id="@+id/isbnSearchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint="@string/input_hint"
                android:inputType="number"
                android:saveEnabled="true"
                android:layout_margin="@dimen/spacing_normal"/>
        </RelativeLayout>

        <ScrollView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"  >

                <ImageView
                    android:id="@+id/bookCover"
                    android:layout_width="@dimen/add_book_cover_width"
                    android:layout_height="@dimen/add_book_cover_height"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginRight="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:contentDescription="@string/book_cover"
                    android:scaleType="center"
                    android:adjustViewBounds="true"
                    tools:src="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/noBookFound"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textIsSelectable="true"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="@dimen/text_size_xlarge"
                    tools:text="@string/no_books"/>

                <TextView
                    android:id="@+id/bookTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_toRightOf="@id/bookCover"
                    android:layout_toEndOf="@id/bookCover"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    tools:text="Holy Bible"/>

                <TextView
                    android:id="@+id/bookSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bookTitle"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_toRightOf="@id/bookCover"
                    android:layout_toEndOf="@id/bookCover"
                    android:ellipsize="end"
                    android:maxLines="@integer/textview_max_line"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/secondary_text"
                    tools:text="Authorized King James Version"
                    />

                <TextView
                    android:id="@+id/authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bookSubTitle"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_toRightOf="@id/bookCover"
                    android:layout_toEndOf="@id/bookCover"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/secondary_text"
                    tools:text="Zondervan Bibles"
                    />


                <TextView
                    android:id="@+id/categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bookCover"
                    android:layout_marginLeft="@dimen/spacing_normal"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:textSize="@dimen/text_size_small"
                    tools:text="in Bibles"/>

                <TextView
                    android:id="@+id/bookDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/categories"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:padding="@dimen/spacing_normal"
                    tools:text="@string/lorem_ipsum_tool"/>

                <Button
                    android:id="@+id/dismiss_button"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@id/bookDesc"
                    android:layout_margin="@dimen/spacing_normal"
                    android:text="@string/dismiss_button"
                    android:visibility="invisible"
                    android:textColor="@color/secondary_text"/>

                <Button
                    android:id="@+id/save_button"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/bookDesc"
                    android:layout_margin="@dimen/spacing_normal"
                    android:text="@string/save_button"
                    android:visibility="invisible"/>

            </RelativeLayout>
        </ScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_local_see_white_24dp"
        app:layout_anchor="@id/header"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>