<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".controller.fragment.AddBookFragment">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:id="@+id/isbn_search_container"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <android.support.v7.widget.SearchView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="@integer/ean_width"
                android:id="@+id/isbnSearchView"
                android:saveEnabled="true"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:hint="@string/input_hint"
                android:paddingRight="20dp"
                  android:iconifiedByDefault="false"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_button"
                android:id="@+id/scan_button"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noBookFound"
            android:textSize="@dimen/head_line"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:paddingRight="20dp"
            android:layout_below="@+id/isbn_search_container"
            android:layout_alignLeft="@+id/isbn_search_container"
            android:layout_alignStart="@+id/isbn_search_container"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookTitle"
            android:textSize="@dimen/head_line"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:paddingRight="20dp"
            android:layout_below="@+id/isbn_search_container"
            android:layout_alignLeft="@+id/isbn_search_container"
            android:layout_alignStart="@+id/isbn_search_container"
            tools:text="Holy Bible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookSubTitle"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/bookTitle"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_alignLeft="@+id/isbn_search_container"
            tools:text="Authorized King James Version"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/authors"
            android:gravity="end"
            android:textSize="@dimen/small_fontsize"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/bookSubTitle"
            android:layout_alignRight="@+id/isbn_search_container"
            android:layout_alignEnd="@+id/isbn_search_container"
            tools:text="Zondervan Bibles"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookCover"
            android:contentDescription="@string/book_cover"
            android:layout_alignTop="@+id/authors"
            android:layout_alignLeft="@+id/isbn_search_container"
            android:layout_alignStart="@+id/isbn_search_container"
            tools:src="@drawable/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/categories"
            android:textSize="@dimen/small_fontsize"
            android:layout_below="@+id/bookCover"
            android:layout_marginTop="20dp"
            android:layout_alignLeft="@+id/isbn_search_container"
            android:layout_alignStart="@+id/isbn_search_container"
            tools:text="Bibles"/>

    </RelativeLayout>
</FrameLayout>
